--- a/index.html
+++ b/index.html
@@ -1,195 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polaroid Store</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
-        nav {
-            background-color: #ffd700;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav button {
-            background-color: transparent;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-            margin: 0 10px;
-            padding: 5px 10px;
-        }
-        .content {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .product {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
-        .product-item {
-            width: 45%;
-            padding: 10px;
-            background-color: #f9f9f9;
-            border-radius: 5px;
-            margin-bottom: 20px;
-        }
-        .product-item img {
-            width: 100%;
-            border-radius: 5px;
-        }
-        form {
-            margin-top: 20px;
-        }
-        form input[type="text"],
-        form textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-        form input[type="submit"] {
-            background-color: #ffd700;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Polaroid Store</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f0e6f3; /* pastel purple */
+    margin: 0;
+    padding: 0;
+  }
+  
+  header {
+    background-color: #d6e6f3; /* pastel blue */
+    padding: 20px;
+    text-align: center;
+  }
+  
+  nav {
+    background-color: #c1edc0; /* pastel green */
+    padding: 10px;
+    text-align: center;
+  }
+  
+  nav button {
+    margin: 5px;
+    padding: 10px 20px;
+    background-color: #ffcccb; /* pastel pink */
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  main {
+    padding: 20px;
+  }
+  
+  .product {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+  .product-item {
+    margin: 20px;
+    padding: 20px;
+    background-color: #ffffff; /* white */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+  }
+</style>
 </head>
 <body>
 
+<header>
+  <h1>Polaroid Store</h1>
+</header>
+
 <nav>
-    <button onclick="showHome()">Home</button>
-    <button onclick="showProducts()">Products</button>
-    <button onclick="showWishlist()">Wishlist</button>
-    <button onclick="showCart()">Shopping Cart</button>
-    <button onclick="showContact()">Contact Us</button>
+  <button id="home-btn">Home</button>
+  <button id="product-btn">Product</button>
+  <button id="wishlist-btn">Wishlist</button>
+  <button id="cart-btn">Shopping Cart</button>
+  <button id="reviews-btn">Reviews</button>
+  <button id="contact-btn">Contact Us</button>
 </nav>
 
-<div id="home" class="content">
-    <h1>About Polaroids</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis libero in dui consectetur ultricies. Nulla facilisi.</p>
-    <img src="polaroid1.jpg" alt="Polaroid Image">
-    <img src="polaroid2.jpg" alt="Polaroid Image">
-    <img src="polaroid3.jpg" alt="Polaroid Image">
-</div>
-
-<div id="products" class="content" style="display: none;">
-    <h1>Products</h1>
-    <div class="product">
-        <div class="product-item">
-            <img src="polaroid1.jpg" alt="Polaroid Image">
-            <p>$10</p>
-            <button onclick="addToWishlist('Polaroid 1')">Add to Wishlist</button>
-            <button onclick="addToCart('Polaroid 1', 10)">Add to Cart</button>
-        </div>
-        <div class="product-item">
-            <img src="polaroid2.jpg" alt="Polaroid Image">
-            <p>$15</p>
-            <button onclick="addToWishlist('Polaroid 2')">Add to Wishlist</button>
-            <button onclick="addToCart('Polaroid 2', 15)">Add to Cart</button>
-        </div>
-        <div class="product-item">
-            <img src="polaroid3.jpg" alt="Polaroid Image">
-            <p>$20</p>
-            <button onclick="addToWishlist('Polaroid 3')">Add to Wishlist</button>
-            <button onclick="addToCart('Polaroid 3', 20)">Add to Cart</button>
-        </div>
-        <div class="product-item">
-            <img src="polaroid4.jpg" alt="Polaroid Image">
-            <p>$25</p>
-            <button onclick="addToWishlist('Polaroid 4')">Add to Wishlist</button>
-            <button onclick="addToCart('Polaroid 4', 25)">Add to Cart</button>
-        </div>
-    </div>
-</div>
-
-<div id="wishlist" class="content" style="display: none;">
-    <h1>Wishlist</h1>
-    <p id="wishlistCount">0 items wishlisted</p>
-    <div id="wishlistItems"></div>
-</div>
-
-<div id="cart" class="content" style="display: none;">
-    <h1>Shopping Cart</h1>
-    <div id="cartItems"></div>
-    <p>Total: $<span id="cartTotal">0</span></p>
-</div>
-
-<div id="contact" class="content" style="display: none;">
-    <h1>Contact Us</h1>
-    <form>
-        <input type="text" placeholder="Your Name">
-        <input type="text" placeholder="Your Email">
-        <textarea placeholder="Your Message"></textarea>
-        <input type="submit" value="Submit">
-    </form>
-</div>
+<main id="content">
+  <!-- Content will be dynamically loaded here -->
+</main>
 
 <script>
-    let wishlist = [];
-    let cart = [];
+  const content = document.getElementById('content');
+  const homeBtn = document.getElementById('home-btn');
+  const productBtn = document.getElementById('product-btn');
+  const wishlistBtn = document.getElementById('wishlist-btn');
+  const cartBtn = document.getElementById('cart-btn');
+  const reviewsBtn = document.getElementById('reviews-btn');
+  const contactBtn = document.getElementById('contact-btn');
 
-    function showHome() {
-        hideAll();
-        document.getElementById('home').style.display = 'block';
-    }
+  homeBtn.addEventListener('click', () => {
+    content.innerHTML = `
+      <h2>Welcome to our Polaroid Store!</h2>
+      <p>Explore our collection of vintage-style polaroid cameras and films.</p>
+      <img src="polaroid.jpg" alt="Polaroid camera">
+    `;
+  });
 
-    function showProducts() {
-        hideAll();
-        document.getElementById('products').style.display = 'block';
-    }
+  productBtn.addEventListener('click', () => {
+    content.innerHTML = `
+      <div class="product">
+        <div class="product-item">
+          <h2>Polaroid Camera 1</h2>
+          <img src="polaroid1.jpg" alt="Polaroid Camera 1">
+          <p>$100</p>
+          <button>Add to Wishlist</button>
+          <button>Add to Cart</button>
+        </div>
+        <div class="product-item">
+          <h2>Polaroid Camera 2</h2>
+          <img src="polaroid2.jpg" alt="Polaroid Camera 2">
+          <p>$120</p>
+          <button>Add to Wishlist</button>
+          <button>Add to Cart</button>
+        </div>
+        <div class="product-item">
+          <h2>Polaroid Film Pack</h2>
+          <img src="film.jpg" alt="Polaroid Film Pack">
+          <p>$20</p>
+          <button>Add to Wishlist</button>
+          <button>Add to Cart</button>
+        </div>
+        <div class="product-item">
+          <h2>Polaroid Accessories</h2>
+          <img src="accessories.jpg" alt="Polaroid Accessories">
+          <p>$15</p>
+          <button>Add to Wishlist</button>
+          <button>Add to Cart</button>
+        </div>
+      </div>
+    `;
+  });
 
-    function showWishlist() {
-        hideAll();
-        document.getElementById('wishlist').style.display = 'block';
-        document.getElementById('wishlistCount').innerText = wishlist.length + " items wishlisted";
-        document.getElementById('wishlistItems').innerHTML = wishlist.map(item => "<p>" + item + "</p>").join("");
-    }
+  wishlistBtn.addEventListener('click', () => {
+    // Simulate dynamic content for wishlist
+    const items = ['Polaroid Camera 1', 'Polaroid Accessories'];
+    const wishlistCount = items.length;
+    let wishlistContent = `<h2>Wishlist (${wishlistCount})</h2>`;
+    wishlistContent += '<ul>';
+    items.forEach(item => {
+      wishlistContent += `<li>${item}</li>`;
+    });
+    wishlistContent += '</ul>';
+    content.innerHTML = wishlistContent;
+  });
 
-    function showCart() {
-        hideAll();
-        document.getElementById('cart').style.display = 'block';
-        let total = cart.reduce((acc, item) => acc + item.price, 0);
-        document.getElementById('cartTotal').innerText = total;
-        document.getElementById('cartItems').innerHTML = cart.map(item => "<p>" + item.name + " - $" + item.price + "</p>").join("");
-    }
+  cartBtn.addEventListener('click', () => {
+    // Simulate dynamic content for shopping cart
+    const items = [
+      { name: 'Polaroid Camera 1', price: 100 },
+      { name: 'Polaroid Accessories', price: 15 }
+    ];
+    const totalPrice = items.reduce((acc, item) => acc + item.price, 0);
+    let cartContent = `<h2>Shopping Cart</h2>`;
+    cartContent += '<ul>';
+    items.forEach(item => {
+      cartContent += `<li>${item.name} - $${item.price}</li>`;
+    });
+    cartContent += `<li>Total: $${totalPrice}</li>`;
+    cartContent += '</ul>';
+    content.innerHTML = cartContent;
+  });
 
-    function showContact() {
-        hideAll();
-        document.getElementById('contact').style.display = 'block';
-    }
-
-    function hideAll() {
-        document.getElementById('home').style.display = 'none';
-        document.getElementById('products').style.display = 'none';
-        document.getElementById('wishlist').style.display = 'none';
-        document.getElementById('cart').style.display = 'none';
-        document.getElementById('contact').style.display = 'none';
-    }
-
-    function addToWishlist(item) {
-        wishlist.push(item);
-        alert("Item added to wishlist: " + item);
-    }
-
-    function addToCart(name, price) {
-        cart.push({ name, price });
-        alert("Item added to cart: " + name);
-    }
+  contactBtn.addEventListener('click', () => {
+    content.innerHTML = `
+      <h2>Contact Us</h2>
+      <form>
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name"><br>
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email"><br>
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message"></textarea><br><br>
+        <input type="submit" value="Submit">
+      </form>
+    `;
+  });
 </script>
 
 </body>
