--- a/index.html
+++ b/index.html
@@ -7,167 +7,182 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: #f0e6f3; /* pastel purple */
+    background-color: #f0e6f4; /* pastel purple */
     margin: 0;
     padding: 0;
   }
-  
-  header {
-    background-color: #d6e6f3; /* pastel blue */
-    padding: 20px;
-    text-align: center;
-  }
-  
   nav {
-    background-color: #c1edc0; /* pastel green */
+    background-color: #ffc3a0; /* pastel orange */
     padding: 10px;
     text-align: center;
   }
-  
   nav button {
-    margin: 5px;
-    padding: 10px 20px;
-    background-color: #ffcccb; /* pastel pink */
+    background-color: #ffcccc; /* pastel pink */
     border: none;
-    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 0 10px;
     cursor: pointer;
+    border-radius: 5px;
   }
-  
-  main {
-    padding: 20px;
+  .container {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 0 20px;
   }
-  
   .product {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    padding: 10px;
+    background-color: #ffcccc; /* pastel pink */
+    border-radius: 5px;
   }
-  
-  .product-item {
-    margin: 20px;
-    padding: 20px;
-    background-color: #ffffff; /* white */
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+  .product img {
+    max-width: 200px;
+    margin-right: 20px;
   }
 </style>
 </head>
 <body>
 
-<header>
-  <h1>Polaroid Store</h1>
-</header>
-
 <nav>
-  <button id="home-btn">Home</button>
-  <button id="product-btn">Product</button>
-  <button id="wishlist-btn">Wishlist</button>
-  <button id="cart-btn">Shopping Cart</button>
-  <button id="reviews-btn">Reviews</button>
-  <button id="contact-btn">Contact Us</button>
+  <button id="homeBtn">Home</button>
+  <button id="productBtn">Product</button>
+  <button id="wishlistBtn">Wishlist</button>
+  <button id="cartBtn">Shopping Cart</button>
+  <button id="contactBtn">Contact Us</button>
 </nav>
 
-<main id="content">
-  <!-- Content will be dynamically loaded here -->
-</main>
+<div id="content" class="container">
+  <h1>Welcome to our Polaroid Store!</h1>
+  <p>We offer a variety of Polaroid cameras and films to capture your precious moments.</p>
+</div>
 
 <script>
-  const content = document.getElementById('content');
-  const homeBtn = document.getElementById('home-btn');
-  const productBtn = document.getElementById('product-btn');
-  const wishlistBtn = document.getElementById('wishlist-btn');
-  const cartBtn = document.getElementById('cart-btn');
-  const reviewsBtn = document.getElementById('reviews-btn');
-  const contactBtn = document.getElementById('contact-btn');
-
-  homeBtn.addEventListener('click', () => {
-    content.innerHTML = `
-      <h2>Welcome to our Polaroid Store!</h2>
-      <p>Explore our collection of vintage-style polaroid cameras and films.</p>
-      <img src="polaroid.jpg" alt="Polaroid camera">
-    `;
+  document.getElementById("homeBtn").addEventListener("click", function() {
+    document.getElementById("content").innerHTML = `
+      <div class="container">
+        <h1>Welcome to our Polaroid Store!</h1>
+        <p>We offer a variety of Polaroid cameras and films to capture your precious moments.</p>
+        <img src="polaroid1.jpg" alt="Polaroid 1">
+        <img src="polaroid2.jpg" alt="Polaroid 2">
+      </div>`;
   });
 
-  productBtn.addEventListener('click', () => {
-    content.innerHTML = `
-      <div class="product">
-        <div class="product-item">
-          <h2>Polaroid Camera 1</h2>
-          <img src="polaroid1.jpg" alt="Polaroid Camera 1">
-          <p>$100</p>
-          <button>Add to Wishlist</button>
-          <button>Add to Cart</button>
+  document.getElementById("productBtn").addEventListener("click", function() {
+    document.getElementById("content").innerHTML = `
+      <div class="container">
+        <h1>Our Products</h1>
+        <div class="product">
+          <img src="product1.jpg" alt="Product 1">
+          <div>
+            <p>Product Name 1</p>
+            <p>$19.99</p>
+            <button onclick="addToWishlist(1)">Add to Wishlist</button>
+            <button onclick="addToCart(1)">Add to Cart</button>
+          </div>
         </div>
-        <div class="product-item">
-          <h2>Polaroid Camera 2</h2>
-          <img src="polaroid2.jpg" alt="Polaroid Camera 2">
-          <p>$120</p>
-          <button>Add to Wishlist</button>
-          <button>Add to Cart</button>
+        <div class="product">
+          <img src="product2.jpg" alt="Product 2">
+          <div>
+            <p>Product Name 2</p>
+            <p>$24.99</p>
+            <button onclick="addToWishlist(2)">Add to Wishlist</button>
+            <button onclick="addToCart(2)">Add to Cart</button>
+          </div>
         </div>
-        <div class="product-item">
-          <h2>Polaroid Film Pack</h2>
-          <img src="film.jpg" alt="Polaroid Film Pack">
-          <p>$20</p>
-          <button>Add to Wishlist</button>
-          <button>Add to Cart</button>
+        <div class="product">
+          <img src="product3.jpg" alt="Product 3">
+          <div>
+            <p>Product Name 3</p>
+            <p>$29.99</p>
+            <button onclick="addToWishlist(3)">Add to Wishlist</button>
+            <button onclick="addToCart(3)">Add to Cart</button>
+          </div>
         </div>
-        <div class="product-item">
-          <h2>Polaroid Accessories</h2>
-          <img src="accessories.jpg" alt="Polaroid Accessories">
-          <p>$15</p>
-          <button>Add to Wishlist</button>
-          <button>Add to Cart</button>
+        <div class="product">
+          <img src="product4.jpg" alt="Product 4">
+          <div>
+            <p>Product Name 4</p>
+            <p>$39.99</p>
+            <button onclick="addToWishlist(4)">Add to Wishlist</button>
+            <button onclick="addToCart(4)">Add to Cart</button>
+          </div>
         </div>
-      </div>
-    `;
+      </div>`;
   });
 
-  wishlistBtn.addEventListener('click', () => {
-    // Simulate dynamic content for wishlist
-    const items = ['Polaroid Camera 1', 'Polaroid Accessories'];
-    const wishlistCount = items.length;
-    let wishlistContent = `<h2>Wishlist (${wishlistCount})</h2>`;
-    wishlistContent += '<ul>';
-    items.forEach(item => {
-      wishlistContent += `<li>${item}</li>`;
+  document.getElementById("wishlistBtn").addEventListener("click", function() {
+    // Fetch wishlist items from storage and display
+    let wishlistItems = JSON.parse(localStorage.getItem("wishlist")) || [];
+    let content = `<div class="container"><h1>Wishlist</h1>`;
+    content += `<p>${wishlistItems.length} items in your wishlist.</p>`;
+    wishlistItems.forEach(item => {
+      content += `<div class="product">
+                    <img src="product${item}.jpg" alt="Product ${item}">
+                    <div>
+                      <p>Product Name ${item}</p>
+                      <p>$${(item + 15).toFixed(2)}</p>
+                    </div>
+                  </div>`;
     });
-    wishlistContent += '</ul>';
-    content.innerHTML = wishlistContent;
+    content += `</div>`;
+    document.getElementById("content").innerHTML = content;
   });
 
-  cartBtn.addEventListener('click', () => {
-    // Simulate dynamic content for shopping cart
-    const items = [
-      { name: 'Polaroid Camera 1', price: 100 },
-      { name: 'Polaroid Accessories', price: 15 }
-    ];
-    const totalPrice = items.reduce((acc, item) => acc + item.price, 0);
-    let cartContent = `<h2>Shopping Cart</h2>`;
-    cartContent += '<ul>';
-    items.forEach(item => {
-      cartContent += `<li>${item.name} - $${item.price}</li>`;
-    });
-    cartContent += `<li>Total: $${totalPrice}</li>`;
-    cartContent += '</ul>';
-    content.innerHTML = cartContent;
+  document.getElementById("cartBtn").addEventListener("click", function() {
+    // Fetch cart items from storage and display
+    let cartItems = JSON.parse(localStorage.getItem("cart")) || [];
+    let total = 0;
+    let content = `<div class="container"><h1>Shopping Cart</h1>`;
+    if (cartItems.length === 0) {
+      content += `<p>Your shopping cart is empty.</p>`;
+    } else {
+      content += `<ul>`;
+      cartItems.forEach(item => {
+        total += item + 15; // Dummy price calculation
+        content += `<li>Product Name ${item} - $${(item + 15).toFixed(2)}</li>`;
+      });
+      content += `</ul>`;
+      content += `<p>Total: $${total.toFixed(2)}</p>`;
+    }
+    content += `</div>`;
+    document.getElementById("content").innerHTML = content;
   });
 
-  contactBtn.addEventListener('click', () => {
-    content.innerHTML = `
-      <h2>Contact Us</h2>
-      <form>
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name"><br>
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email"><br>
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message"></textarea><br><br>
-        <input type="submit" value="Submit">
-      </form>
-    `;
+  document.getElementById("contactBtn").addEventListener("click", function() {
+    document.getElementById("content").innerHTML = `
+      <div class="container">
+        <h1>Contact Us</h1>
+        <form>
+          <label for="name">Name:</label><br>
+          <input type="text" id="name" name="name" required><br>
+          <label for="email">Email:</label><br>
+          <input type="email" id="email" name="email" required><br>
+          <label for="message">Message:</label><br>
+          <textarea id="message" name="message" rows="4" required></textarea><br><br>
+          <button type="submit">Submit</button>
+        </form>
+      </div>`;
   });
+
+  function addToWishlist(productId) {
+    let wishlistItems = JSON.parse(localStorage.getItem("wishlist")) || [];
+    if (!wishlistItems.includes(productId)) {
+      wishlistItems.push(productId);
+      localStorage.setItem("wishlist", JSON.stringify(wishlistItems));
+      alert("Added to wishlist!");
+    } else {
+      alert("This item is already in your wishlist!");
+    }
+  }
+
+  function addToCart(productId) {
+    let cartItems = JSON.parse(localStorage.getItem("cart")) || [];
+    cartItems.push(productId);
+    localStorage.setItem("cart", JSON.stringify(cartItems));
+    alert("Added to cart!");
+  }
 </script>
 
 </body>
